# ModAnalyzer

./: .gitignore  README.md  analyzer.py  generator.py  linker.py  pyproject.toml  validator.py  verifier.py
ModAnalyzer/: __init__.py  analyzer.py  mod_analyzer.py
ModAnalyzer/ScriptExtender/: __init__.py  se_analyzer.py
ModAnalyzer/Structure/: __init__.py  mod_linker.py  path_analyzer.py  structure_analyzer.py  structure_generator.py  xml_utils.py
ModAnalyzer/Structure/file_templates/: localization.xml  meta.lsx  tag.lsx
ModAnalyzer/Structure/models/: tag.py
ModAnalyzer/TreasureTable/: __init__.py  items_checker.py  root_template_parser.py  treasure_table_analyzer.py  treasure_table_parser.py  treasure_table_reader.py  xml_utils.py
ModAnalyzer/TreasureTable/models/: __init__.py  treasure_table.py
ModValidator/: __init__.py  mod_structure_validator.py  mod_validator.py
TestMod/Mods/TestMod/ScriptExtender/: Config.json  (+1 more)
TreasureTableVerifier/: __init__.py  root_template_parser.py  treasure_table_parser.py  treasure_table_reader.py
TreasureTableVerifier/models/: __init__.py  treasure_table.py  treasure_table_entry.py
tests/: conftest.py  test_items_checker.py  test_mod_analyzer.py  test_mod_linker.py  test_mod_validator.py  test_path_analyzer.py  test_rt_items_reader.py  test_se_analyzer.py  test_structure_analyzer.py  test_structure_generator.py  test_treasure_table_analyzer.py  test_verifier.py
tests/fixture/: TreasureTable.txt  TreasureTableInvalidEntry.txt  TreasureTableWithoutReplacementEntryExample.txt  dirs.json  runes.lsx  tag.lsx
(+1 files in other folders)
