[project]
name = "ModAnalyzer"
version = "0.1.0"
description = "Analyzes BG3 mods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.10.0",
    "coverage>=7.6.1",
    "directory-tree>=1.0.0",
    "jinja2>=3.1.4",
    "pytest>=8.3.2",
    "tabulate>=0.9.0",
    "typer>=0.12.5",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(levelname)8s] %(message)s"
log_format = "[%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-s"
